chỉnh sửa lại giao diện
chỉnh sửa

--- a/index2.html
+++ b/index2.html
@@ -40,59 +40,209 @@
                 <li><a href="">Trang Chủ</a></li>
                 <li><a href="">Cho Thuê Phòng</a>
                     <ul>
-                        <li><a href="/phong-tro/tp-ho-chi-minh.html" title="TP Hồ Chí Minh">TP Hồ Chí Minh</a></li>
-                        <li><a href="/phong-tro/ha-noi.html" title="Hà Nội">Hà Nội</a></li>
-                        <li><a href="/phong-tro/binh-duong.html" title="Bình Dương">Bình Dương</a></li>
-                        <li><a href="/phong-tro/dong-nai.html" title="Đồng Nai">Đồng Nai</a></li>
-                        <li><a href="/phong-tro/vung-tau.html" title="Vũng Tàu">Vũng Tàu</a></li>
-                        <li><a href="/phong-tro/can-tho.html" title="Cần Thơ">Cần Thơ</a></li>
-                        <li><a href="/phong-tro/hai-phong.html" title="Hải Phòng">Hải Phòng</a></li>
-                        <li><a href="/phong-tro/da-nang.html" title="Đà Nẵng">Đà Nẵng</a></li>
-                        <li><a href="/phong-tro/thua-thien-hue.html" title="Thừa Thiên Huế">Thừa Thiên Huế</a></li>
+                        <li><a href="#" title="TP Hồ Chí Minh">TP Hồ Chí Minh</a></li>
+                        <li><a href="#" title="Hà Nội">Hà Nội</a></li>
+                        <li><a href="#" title="Bình Dương">Bình Dương</a></li>
+                        <li><a href="#" title="Đồng Nai">Đồng Nai</a></li>
+                        <li><a href="#" title="Vũng Tàu">Vũng Tàu</a></li>
+                        <li><a href="#" title="Cần Thơ">Cần Thơ</a></li>
+                        <li><a href="#" title="Hải Phòng">Hải Phòng</a></li>
+                        <li><a href="#" title="Đà Nẵng">Đà Nẵng</a></li>
+                        <li><a href="#" title="Thừa Thiên Huế">Thừa Thiên Huế</a></li>
 
                     </ul>
                 </li>
-                <li><a href="">Tìm Ở Ghép</a></li>
-                <li><a href="">Nhà Cho Thuê</a></li>
+                <li><a href="">Tìm Ở Ghép</a>
+                    <ul>
+                        <li><a href="#" title="TP Hồ Chí Minh">TP Hồ Chí Minh</a></li>
+                        <li><a href="#" title="Hà Nội">Hà Nội</a></li>
+                        <li><a href="#" title="Bình Dương">Bình Dương</a></li>
+                        <li><a href="#" title="Đồng Nai">Đồng Nai</a></li>
+                        <li><a href="#" title="Vũng Tàu">Vũng Tàu</a></li>
+                        <li><a href="#" title="Cần Thơ">Cần Thơ</a></li>
+                        <li><a href="#" title="Hải Phòng">Hải Phòng</a></li>
+                        <li><a href="#" title="Đà Nẵng">Đà Nẵng</a></li>
+                        <li><a href="#" title="Thừa Thiên Huế">Thừa Thiên Huế</a></li>
+
+                    </ul>
+                </li>
+                <li><a href="">Nhà Cho Thuê</a>
+                    <ul>
+                        <li><a href="#" title="TP Hồ Chí Minh">TP Hồ Chí Minh</a></li>
+                        <li><a href="#" title="Hà Nội">Hà Nội</a></li>
+                        <li><a href="#" title="Bình Dương">Bình Dương</a></li>
+                        <li><a href="#" title="Đồng Nai">Đồng Nai</a></li>
+                        <li><a href="#" title="Vũng Tàu">Vũng Tàu</a></li>
+                        <li><a href="#" title="Cần Thơ">Cần Thơ</a></li>
+                        <li><a href="#" title="Hải Phòng">Hải Phòng</a></li>
+                        <li><a href="#" title="Đà Nẵng">Đà Nẵng</a></li>
+                        <li><a href="#" title="Thừa Thiên Huế">Thừa Thiên Huế</a></li>
+
+                    </ul>
+
+                </li>
+
                 <li><a href="">Giới Thiệu</a></li>
                 <li><a href="">Hướng Dẫn </a></li>
                 <li><a href="">Đăng Tin</a></li>
+
             </ul>
             <div class="clear"></div>
 
         </div>
-        <div id=wrapper>
-            <div id="left">
-                <div class=news>
-                    <h3>PHÒNG CAO CẤP. MỚI XÂY. THANG MÁY. HẦM XE 24/24. Q. TÂN BÌNH. CỬA SỔ GÁC TOILET PHƠI ĐỒ RIÊNG</h3>
-                    <img src="hinh1.jpg">Nội thất cao cấp, có gác, bếp riêng, cửa sổ thông thoáng. Chỗ phơi đồ chung &
-                    riêng trong phòng. Tùy chọn nước thủy cục/nước máy. Wifi mạnh, thang máy hiện đại, hầm xe rộng. Mở
-                    cửa 24/24. Vừa xây xong còn mới 100%. Vị trí ngay trung tâm đi Q3, Q1 hoặc Sbay chỉ 5-10p. Khu vực
-                    an ninh, đối diện Etown, gần chợ HHT, gần nhiều trường, bệnh viện và nơi ăn uống, mua sắm như
-                    Lotte, Pandora. LH ngay để chọn vị trí phòng đẹp và giá tốt.
-                </div>
-                <div class=news>
-                    <h3>PHÒNG CAO CẤP. MỚI XÂY. THANG MÁY. HẦM XE 24/24. Q. TÂN BÌNH. CỬA SỔ GÁC TOILET PHƠI ĐỒ RIÊNG</h3>
-                    <img src="hinh1.jpg">Nội thất cao cấp, có gác, bếp riêng, cửa sổ thông thoáng. Chỗ phơi đồ chung &
-                    riêng trong phòng. Tùy chọn nước thủy cục/nước máy. Wifi mạnh, thang máy hiện đại, hầm xe rộng. Mở
-                    cửa 24/24. Vừa xây xong còn mới 100%. Vị trí ngay trung tâm đi Q3, Q1 hoặc Sbay chỉ 5-10p. Khu vực
-                    an ninh, đối diện Etown, gần chợ HHT, gần nhiều trường, bệnh viện và nơi ăn uống, mua sắm như
-                    Lotte, Pandora. LH ngay để chọn vị trí phòng đẹp và giá tốt.
-                </div>
-                <div class=news style="border-bottom:none">
-                    <h3>PHÒNG CAO CẤP. MỚI XÂY. THANG MÁY. HẦM XE 24/24. Q. TÂN BÌNH. CỬA SỔ GÁC TOILET PHƠI ĐỒ RIÊNG</h3>
-                    <img src="hinh1.jpg">Nội thất cao cấp, có gác, bếp riêng, cửa sổ thông thoáng. Chỗ phơi đồ chung &
-                    riêng trong phòng. Tùy chọn nước thủy cục/nước máy. Wifi mạnh, thang máy hiện đại, hầm xe rộng. Mở
-                    cửa 24/24. Vừa xây xong còn mới 100%. Vị trí ngay trung tâm đi Q3, Q1 hoặc Sbay chỉ 5-10p. Khu vực
-                    an ninh, đối diện Etown, gần chợ HHT, gần nhiều trường, bệnh viện và nơi ăn uống, mua sắm như
-                    Lotte, Pandora. LH ngay để chọn vị trí phòng đẹp và giá tốt.
-                </div>
-            </div>
-            <div id="right">right</div>
-            <div style="clear:left"></div>
-        </div>
 
-        <div id="bottom">Ban Quyen</div>
+    </div>
+    <!--phan doi thieu-->
+    <div class="review">
+        <h1>Website cho thuê phòng trọ, nhà trọ số 1 Việt Nam</h1>
+        <p>Cho thuê phòng trọ, nhà trọ số 1 Việt Nam - Website đăng tin cho thuê phòng trọ, tìm phòng trọ
+            nhanh, hiệu quả với hơn 90.000+ tin đăng và hơn 2.000.000 lượt xem mỗi tháng. <b>cho thuê phòng
+                trọ, nhà trọ, thuê nhà nguyên căn, cho thuê căn hộ, tìm người ở ghép...</b> Vì vậy tin của bạn
+            đăng trên website sẽ tiếp cận với nhiều khách hàng hơn, do đó giao dịch nhanh hơn, tiết kiệm chi
+            phí hơn.</p>
+    </div>
+    <!--phan tim kiem nhanh-->
+    <div class="searchh">
+        <form action="/#" method="GET" name="frmSearch" id="frmSearch">
+            <h3 id="title">Tìm kiếm nhanh</h3>
+            <div id="searchdata">
+                <select id="ddlCategory" name="category" class="form-control">
+                    <option value="">Chọn danh mục</option>
+
+                    <option value="0400">Cho thuê phòng trọ</option>
+                    <option value="0600">Nhà cho thuê</option>
+                    <option value="0500">Tìm người ở ghép</option>
+
+                </select>
+            </div>
+            <div id="searchdata">
+                <select id="ddlProvince" name="province" class="form-control">
+                    <option value="">Tỉnh/Thành phố</option>
+
+                    <option value="1">TP Hồ Chí Minh</option>
+                    <option value="2">Hà Nội</option>
+                    <option value="43">Bình Dương</option>
+                    <option value="47">Đồng Nai</option>
+                    <option value="51">Vũng Tàu</option>
+                    <option value="54">Cần Thơ</option>
+                    <option value="3">Hải Phòng</option>
+                    <option value="4">Đà Nẵng</option>
+                    <option value="32">Thừa Thiên Huế</option>
+                    <option value="5">Hà Giang</option>
+                    <option value="6">Cao Bằng</option>
+                    <option value="7">Lai Châu</option>
+                    <option value="8">Lào Cai</option>
+                    <option value="9">Tuyên Quang</option>
+                    <option value="10">Lạng Sơn</option>
+                    <option value="11">Bắc Kạn</option>
+                    <option value="12">Thái Nguyên</option>
+                    <option value="13">Yên Bái</option>
+                    <option value="14">Sơn La</option>
+                    <option value="15">Phú Thọ</option>
+                    <option value="16">Vĩnh Phúc</option>
+                    <option value="17">Quảng Ninh</option>
+                    <option value="18">Bắc Giang</option>
+                    <option value="19">Bắc Ninh</option>
+                    <option value="20">Hải Dương</option>
+                    <option value="21">Hưng Yên</option>
+                    <option value="22">Hoà Bình</option>
+                    <option value="23">Hà Nam</option>
+                    <option value="24">Nam Định</option>
+                    <option value="25">Thái Bình</option>
+                    <option value="26">Ninh Bình</option>
+                    <option value="27">Thanh Hoá</option>
+                    <option value="28">Nghệ An</option>
+                    <option value="29">Hà Tĩnh</option>
+                    <option value="30">Quảng Bình</option>
+                    <option value="31">Quảng Trị</option>
+                    <option value="33">Quảng Nam</option>
+                    <option value="34">Quảng Ngãi</option>
+                    <option value="35">Kontum</option>
+                    <option value="36">Bình Định</option>
+                    <option value="37">Gia Lai</option>
+                    <option value="38">Phú Yên</option>
+                    <option value="39">Đăk Lăk</option>
+                    <option value="40">Khánh Hoà</option>
+                    <option value="41">Lâm Đồng</option>
+                    <option value="42">Bình Phước</option>
+                    <option value="55">Bến Tre</option>
+                    <option value="56">Vĩnh Long</option>
+                    <option value="57">Trà Vinh</option>
+                    <option value="58">Sóc Trăng</option>
+                    <option value="59">Bạc Liêu</option>
+                    <option value="60">Cà Mau</option>
+                    <option value="61">Điện Biên</option>
+                    <option value="62">Dăk Nông</option>
+                    <option value="63">Hậu Giang</option>
+                    <option value="48">Long An</option>
+                    <option value="49">Đồng Tháp</option>
+                    <option value="50">An Giang</option>
+                    <option value="44">Ninh Thuận</option>
+                    <option value="45">Tây Ninh</option>
+                    <option value="46">Bình Thuận</option>
+                    <option value="52">Tiền Giang</option>
+                    <option value="53">Kiên Giang</option>
+
+                </select>
+            </div>
+            <div id="searchdata">
+                <select id="ddlDistrict" name="district" class="form-control">
+                    <option value="">Mức giá</option>
+
+                    <option value="0">Thỏa thuận</option>
+                    <option value="1-1000000">&lt; 1 triệu</option>
+                    <option value="1000000-2000000">1 triệu - 2 triệu</option>
+                    <option value="2000000-3000000">2 triệu - 3 triệu</option>
+                    <option value="3000000-5000000">3 triệu - 5 triệu</option>
+                    <option value="5000000">&gt; 5 triệu</option>
+
+                </select>
+            </div>
+            <div id="searchdata">
+                <select id="ddlArea" name="area" class="form-control">
+                    <option value="">Diện tích</option>
+
+                    <option value="0-20">&lt;20 m2</option>
+                    <option value="20-40">20 - 40 m2</option>
+                    <option value="40-80">40 - 80 m2</option>
+                    <option value="80-100">80 - 100 m2</option>
+                    <option value="100">&gt;100 m2</option>
+
+                </select>
+            </div>
+    </div>
+    <div id=wrapper>
+        <div id="left">
+            <div class=news>
+                <h3>PHÒNG CAO CẤP. MỚI XÂY. THANG MÁY. HẦM XE 24/24. Q. TÂN BÌNH. CỬA SỔ GÁC TOILET PHƠI ĐỒ RIÊNG</h3>
+                <img src="hinh1.jpg">Nội thất cao cấp, có gác, bếp riêng, cửa sổ thông thoáng. Chỗ phơi đồ chung &
+                riêng trong phòng. Tùy chọn nước thủy cục/nước máy. Wifi mạnh, thang máy hiện đại, hầm xe rộng. Mở
+                cửa 24/24. Vừa xây xong còn mới 100%. Vị trí ngay trung tâm đi Q3, Q1 hoặc Sbay chỉ 5-10p. Khu vực
+                an ninh, đối diện Etown, gần chợ HHT, gần nhiều trường, bệnh viện và nơi ăn uống, mua sắm như
+                Lotte, Pandora. LH ngay để chọn vị trí phòng đẹp và giá tốt.
+            </div>
+            <div class=news>
+                <h3>PHÒNG CAO CẤP. MỚI XÂY. THANG MÁY. HẦM XE 24/24. Q. TÂN BÌNH. CỬA SỔ GÁC TOILET PHƠI ĐỒ RIÊNG</h3>
+                <img src="hinh1.jpg">Nội thất cao cấp, có gác, bếp riêng, cửa sổ thông thoáng. Chỗ phơi đồ chung &
+                riêng trong phòng. Tùy chọn nước thủy cục/nước máy. Wifi mạnh, thang máy hiện đại, hầm xe rộng. Mở
+                cửa 24/24. Vừa xây xong còn mới 100%. Vị trí ngay trung tâm đi Q3, Q1 hoặc Sbay chỉ 5-10p. Khu vực
+                an ninh, đối diện Etown, gần chợ HHT, gần nhiều trường, bệnh viện và nơi ăn uống, mua sắm như
+                Lotte, Pandora. LH ngay để chọn vị trí phòng đẹp và giá tốt.
+            </div>
+            <div class=news style="border-bottom:none">
+                <h3>PHÒNG CAO CẤP. MỚI XÂY. THANG MÁY. HẦM XE 24/24. Q. TÂN BÌNH. CỬA SỔ GÁC TOILET PHƠI ĐỒ RIÊNG</h3>
+                <img src="hinh1.jpg">Nội thất cao cấp, có gác, bếp riêng, cửa sổ thông thoáng. Chỗ phơi đồ chung &
+                riêng trong phòng. Tùy chọn nước thủy cục/nước máy. Wifi mạnh, thang máy hiện đại, hầm xe rộng. Mở
+                cửa 24/24. Vừa xây xong còn mới 100%. Vị trí ngay trung tâm đi Q3, Q1 hoặc Sbay chỉ 5-10p. Khu vực
+                an ninh, đối diện Etown, gần chợ HHT, gần nhiều trường, bệnh viện và nơi ăn uống, mua sắm như
+                Lotte, Pandora. LH ngay để chọn vị trí phòng đẹp và giá tốt.
+            </div>
+        </div>
+        <div id="right">right</div>
+        <div style="clear:left"></div>
+    </div>
+
+    <div id="bottom">Ban Quyen</div>
 
     </div>
 
